[package]
name = "bridge"
version = "0.1.0"
edition = "2021"
description = "macOS BLE bridge: polls the quiz server and forwards votes to the RustQuiz nRF52840 firmware"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
futures = "0.3"
uuid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
